[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ArgsContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ActionBox.gd" type="Script" id=2]

[node name="ActionBox" type="HBoxContainer"]
margin_right = 576.0
margin_bottom = 88.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 76.0
margin_bottom = 92.0

[node name="IndexLabel" type="Label" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 76, 28 )
size_flags_vertical = 0
custom_colors/font_color = Color( 0.501961, 1, 0.501961, 1 )
text = "act 1."
align = 1
valign = 1

[node name="ForceCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 76.0
margin_bottom = 56.0
rect_min_size = Vector2( 76, 0 )
size_flags_vertical = 0
pressed = true
text = "Force?"

[node name="WaitCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 76.0
margin_bottom = 84.0
rect_min_size = Vector2( 76, 0 )
size_flags_vertical = 0
text = "Wait?"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_right = 542.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 462.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( -268, -240 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 28 )
size_flags_vertical = 0
text = "Type :"
valign = 1

[node name="ActTypeOption" type="OptionButton" parent="VBoxContainer2/HBoxContainer"]
margin_left = 54.0
margin_right = 323.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer"]
margin_left = 327.0
margin_right = 377.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 0
text = "Args :"

[node name="AllArgsContainer" parent="VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 381.0
margin_right = 462.0
margin_bottom = 28.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 32.0
margin_right = 462.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 28 )
size_flags_vertical = 0
text = "Value :"
valign = 1

[node name="ValueTypeOption" type="OptionButton" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 54.0
margin_right = 323.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer2"]
margin_left = 327.0
margin_right = 377.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 0
text = "Args :"

[node name="AllArgsContainer" parent="VBoxContainer2/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 381.0
margin_right = 462.0
margin_bottom = 28.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 64.0
margin_right = 462.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 28 )
size_flags_vertical = 0
text = "Target :"

[node name="TargetTypeOption" type="OptionButton" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 54.0
margin_right = 323.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer3"]
margin_left = 327.0
margin_right = 377.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_vertical = 0
text = "Args :"

[node name="AllArgsContainer" parent="VBoxContainer2/HBoxContainer3" instance=ExtResource( 1 )]
margin_left = 381.0
margin_right = 462.0
margin_bottom = 28.0

[node name="RemoveActBtn" type="Button" parent="."]
margin_left = 546.0
margin_right = 576.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "x"

[connection signal="pressed" from="RemoveActBtn" to="." method="_on_RemoveActBtn_pressed"]
